--- a/style.css
+++ b/style.css
@@ -17,12 +17,12 @@
     text-shadow: 1px 1px 5px black;
   } 
   .banner h1{
-    font-size: 50px;
+    font-size: 2.8em;
     line-height: 1.2;
   }
   .banner p{
     opacity: 0.8;
-    font-size: 30px;
+    font-size: 1.6em;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   }
   #banner{
@@ -36,7 +36,7 @@
     padding: 15px 50px;
   }
   #banner a:hover {
-    background-color: hsl(240, 100%, 50%);
+    background-color: hsl(240, 80%, 50%);
     color: white;
     text-shadow: none;
   }
@@ -51,9 +51,11 @@
   }
   .card img{
     width: 100%;
+    height: 175px;
+    border-radius: 5px;
   }
   .card-left{
-    font-size: 15px;
+    font-size: 0.8em;
     font-family: 'Times New Roman', Times, serif;
     color: #757575;
   }
@@ -65,5 +67,19 @@
     margin-top: 50px;
     color: gainsboro;
   }
-
+  @media only screen and (max-width: 600px) {
+    body {
+      background-color: lightgreen;
+      font-size: 12px;
+    }
+    .banner{
+      padding: 60px;
+    } 
+    .cards-container{
+      flex-direction: column;
+    }
+    .card-left{
+      font-size: 1.2em;
+    }
+  }
 
