--- a/style.css
+++ b/style.css
@@ -67,9 +67,8 @@
     margin-top: 50px;
     color: gainsboro;
   }
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 675px) {
     body {
-      background-color: lightgreen;
       font-size: 12px;
     }
     .banner{
@@ -80,6 +79,9 @@
     }
     .card-left{
       font-size: 1.2em;
+    }
+    #banner a{
+      padding: 7px 25px;
     }
   }
 
